# Envana45Q

./: .gitignore  Envana_CCS_Platform.jpg:Zone.Identifier  Envana_Platform.heic:Zone.Identifier  FRONTEND_QUICK_START.md  GETTING_STARTED.md  INJECTOR_DASHBOARD_IMPLEMENTED.md  RASPBERRY_PI_DEPLOYMENT.md  RASPBERRY_PI_SETUP.md  README.md  REDESIGN_PROGRESS.md  ccs_platform_architecture.md  ccs_platform_architecture.md:Zone.Identifier  co2_capture_section_spec.md  co2_capture_section_spec.md:Zone.Identifier  co2_transportation_section_spec.md  co2_transportation_section_spec.md:Zone.Identifier  deploy-to-pi.sh  docker-compose.yml  injector_iot_dashboard_spec.md  injector_iot_dashboard_spec.md:Zone.Identifier  monitoring_well_iot_dashboard_spec.md  monitoring_well_iot_dashboard_spec.md:Zone.Identifier  nixpacks.toml  railway.toml  raspberry-pi-setup.sh  start.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/models/: __init__.py  processed_data.py  sensor_data.py
backend/src/processors/: __init__.py  average.py  base.py  rolling_average.py
backend/src/routers/: __init__.py  processing.py  query.py  sensors.py
backend/src/schemas/: __init__.py  processing.py  sensor.py
backend/src/services/: __init__.py  data_ingestion.py  data_processing.py  scheduler.py
backend/tests/: __init__.py  conftest.py  test_processors.py
data-producer/: .env.example  .env.raspberry-pi  Dockerfile  README.md  pyproject.toml
data-producer/src/: __init__.py  client.py  config.py  main.py
data-producer/src/generators/: __init__.py  base.py  bme280.py  bme280_real.py
data-producer/tests/: __init__.py  test_generator.py
database/init/: 01_init_schema.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  data_producer.md  frontend.md  server.md
frontend/: Dockerfile  README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
(+30 files in other folders)
